Added sliding on order details page

--- a/order-details.html
+++ b/order-details.html
@@ -114,6 +114,118 @@
                         <div class="mb-8 bg-white shadow-lg overflow-hidden rounded-lg border border-gray-200">
                             <div class="px-4 py-5 border-b border-gray-200 sm:px-6">
                                 <h3 class="text-lg leading-6 font-medium text-gray-900">
+                                    Customer Name
+                                </h3>
+                            </div>
+                            <div>
+                                <dl>
+                                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-4 sm:gap-4 sm:px-6">
+                                        <dt class="text-sm leading-5 font-medium text-gray-500">
+                                            Order Number
+                                        </dt>
+                                        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-3">
+                                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-gray-200 text-gray-800 cursor-pointer flip">#012345</span>
+                                            <div class="mt-4 flex flex-col hidden panel">
+                                                <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                                                    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                                                        <div class="shadow overflow-hidden border border-gray-200 sm:rounded-lg">
+                                                            <table class="min-w-full divide-y divide-gray-200">
+                                                                <thead>
+                                                                    <tr>
+                                                                        <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                                                                            Items
+                                                                        </th>
+                                                                        <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                                                                            Quantity
+                                                                        </th>
+                                                                        <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                                                                            Price
+                                                                        </th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody class="bg-white divide-y divide-gray-200">
+                                                                    <tr>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="flex items-center">
+                                                                                <div class="flex-shrink-0 h-10 w-10">
+                                                                                    <img class="h-10 w-10 rounded-full" src="assets/images/alcohol-testing.jpg"
+                                                                                        alt="">
+                                                                                </div>
+                                                                                <div class="ml-4">
+                                                                                    <div class="text-sm leading-5 font-medium text-gray-900">
+                                                                                        Alcohol Monitoring
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">1</div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">$350</div>
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="flex items-center">
+                                                                                <div class="flex-shrink-0 h-10 w-10">
+                                                                                    <img class="h-10 w-10 rounded-full" src="assets/images/alcohol-testing.jpg"
+                                                                                        alt="">
+                                                                                </div>
+                                                                                <div class="ml-4">
+                                                                                    <div class="text-sm leading-5 font-medium text-gray-900">
+                                                                                        Drug Monitoring
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">1</div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">$350</div>
+                                                                        </td>
+                                                                    </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </dd>
+                                    </div>
+                                    <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-4 sm:gap-4 sm:px-6">
+                                        <dt class="text-sm leading-5 font-medium text-gray-500">
+                                            Order Date
+                                        </dt>
+                                        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-3">
+                                            MM/DD/YYYY
+                                        </dd>
+                                    </div>
+                                    <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-4 sm:gap-4 sm:px-6">
+                                        <dt class="text-sm leading-5 font-medium text-gray-500">
+                                            Total
+                                        </dt>
+                                        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-3">
+                                            $1234
+                                        </dd>
+                                    </div>
+                                    <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-4 sm:gap-4 sm:px-6">
+                                        <dt class="text-sm leading-5 font-medium text-gray-500">
+                                            Status
+                                        </dt>
+                                        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-3">
+                                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-yellow-200 text-yellow-800">Pending</span>
+                                        </dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="px-4 mt-6 sm:px-6 lg:px-8">
+                        <div class="mb-8 bg-white shadow-lg overflow-hidden rounded-lg border border-gray-200">
+                            <div class="px-4 py-5 border-b border-gray-200 sm:px-6">
+                                <h3 class="text-lg leading-6 font-medium text-gray-900">
                                     Lorem ipsum
                                 </h3>
                             </div>
@@ -124,7 +236,74 @@
                                             Order Number
                                         </dt>
                                         <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-                                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-gray-200 text-gray-800 modal-link"><a href="#">#012345</a></span>
+                                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-gray-200 text-gray-800 flip">
+                                                #012345
+                                            </span>
+                                            <div class="mt-4 flex flex-col hidden panel">
+                                                <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                                                    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                                                        <div class="shadow overflow-hidden border border-gray-200 sm:rounded-lg">
+                                                            <table class="min-w-full divide-y divide-gray-200">
+                                                                <thead>
+                                                                    <tr>
+                                                                        <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                                                                            Items
+                                                                        </th>
+                                                                        <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                                                                            Quantity
+                                                                        </th>
+                                                                        <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                                                                            Price
+                                                                        </th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody class="bg-white divide-y divide-gray-200">
+                                                                    <tr>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="flex items-center">
+                                                                                <div class="flex-shrink-0 h-10 w-10">
+                                                                                    <img class="h-10 w-10 rounded-full" src="assets/images/alcohol-testing.jpg" alt="">
+                                                                                </div>
+                                                                                <div class="ml-4">
+                                                                                    <div class="text-sm leading-5 font-medium text-gray-900">
+                                                                                        Alcohol Monitoring
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">1</div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">$350</div>
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="flex items-center">
+                                                                                <div class="flex-shrink-0 h-10 w-10">
+                                                                                    <img class="h-10 w-10 rounded-full" src="assets/images/alcohol-testing.jpg" alt="">
+                                                                                </div>
+                                                                                <div class="ml-4">
+                                                                                    <div class="text-sm leading-5 font-medium text-gray-900">
+                                                                                        Drug Monitoring
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">1</div>
+                                                                        </td>
+                                                                        <td class="px-6 py-4 whitespace-no-wrap">
+                                                                            <div class="text-sm leading-5 text-gray-900">$350</div>
+                                                                        </td>
+                                                                    </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </dd>
                                     </div>
                                     <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-4 sm:gap-4 sm:px-6">
@@ -154,7 +333,7 @@
                                 </dl>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <footer class="bg-white">
