--- a/enrolment-details.html
+++ b/enrolment-details.html
@@ -79,7 +79,7 @@
                                     <span class="hidden md:block">Documents</span>
                                 </a>
         
-                                <a href="#" class="group flex justify-center md:justify-start items-center py-2 md:px-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150"
+                                <a href="reports.html" class="group flex justify-center md:justify-start items-center py-2 md:px-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150"
                                     title="Reports">
                                     <svg class="md:mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500 group-focus:text-gray-500 transition ease-in-out duration-150"
                                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
