--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
             <main class="lg:relative">
                 <div class="mx-auto max-w-7xl w-full pt-16 pb-20 text-center lg:py-40 lg:text-left">
                 <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
+                    <img class="h-16 w-auto mb-4" src="assets/images/scram.png" alt="scram">
                     <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl lg:text-5xl xl:text-6xl">
                     Welcome to
                     <br class="xl:hidden">
