--- a/home.html
+++ b/home.html
@@ -10,18 +10,18 @@
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="h-screen fle lg:overflow-hidden bg-white">
-        <div class="relative bg-gray-50">
+    <div class="h-screen lg:flex lg:overflow-hidden">
+        <div class="relative bg-gray-50 h-full w-full">
             
 
-            <main class="lg:relative">
-                <div class="mx-auto max-w-7xl w-full pt-16 pb-20 text-center lg:py-40 lg:text-left">
+            <main class="lg:relative lg:flex lg:items-center lg:h-full">
+                <div class="mx-auto max-w-7xl xl:mx-20 xl:max-w-auto w-full pt-16 pb-20 text-center lg:py-40 lg:text-left">
                 <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
-                    <img class="h-16 w-auto mb-4" src="assets/images/scram.png" alt="scram">
+                    <img class="h-16 mb-4 mx-auto lg:mx-0" src="assets/images/scram.png" alt="scram">
                     <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl lg:text-5xl xl:text-6xl">
-                    Welcome to
+                    Safe Justice
                     <br class="xl:hidden">
-                    <span class="text-primary">Safe Justice</span>
+                    <span class="text-primary"> Solutions</span>
                     </h2>
                     <p class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">
                         Subhead line here about how the services are amazing etc more words for longer subhead woohoo yeaa boi.
