--- a/home.html
+++ b/home.html
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Safe Justice</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
-    <link href="assets/css/style.css" rel="stylesheet">
-</head>
-<body>
-    <div class="h-screen lg:flex lg:overflow-hidden">
-        <div class="relative bg-gray-50 h-full w-full">
-            
 
-            <main class="lg:relative lg:flex lg:items-center lg:h-full">
-                <div class="mx-auto max-w-7xl xl:mx-20 xl:max-w-auto w-full pt-16 pb-20 text-center lg:py-40 lg:text-left">
-                <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
-                    <img class="h-16 mb-4 mx-auto lg:mx-0" src="assets/images/scram.png" alt="scram">
-                    <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl lg:text-5xl xl:text-6xl">
-                    Safe Justice
-                    <br class="xl:hidden">
-                    <span class="text-primary"> Solutions</span>
-                    </h2>
-                    <p class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">
-                        Subhead line here about how the services are amazing etc more words for longer subhead woohoo yeaa boi.
-                    </p>
-                    <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
-                    <div class="rounded-md shadow">
-                        <a href="register.html" class="w-full flex items-center justify-center px-8 py-3 text-base leading-6 font-medium rounded-md text-white bg-primary focus:outline-none md:py-4 md:text-lg md:px-10">
-                        Register
-                        </a>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Safe Justice</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
+        <link href="assets/css/style.css" rel="stylesheet">
+    </head>
+
+    <body>
+        <div class="h-screen lg:flex lg:overflow-hidden">
+            <div class="relative bg-gray-50 h-full w-full">
+
+
+                <main class="lg:relative lg:flex lg:items-center lg:h-full">
+                    <div class="mx-auto max-w-7xl xl:mx-20 xl:max-w-auto w-full pt-16 pb-20 text-center lg:py-40 lg:text-left">
+                        <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
+                            <img class="h-16 mb-4 mx-auto lg:mx-0" src="assets/images/scram.png" alt="scram">
+                            <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl lg:text-5xl xl:text-6xl">
+                                Safe Justice
+                                <br class="xl:hidden">
+                                <span class="text-primary"> Solutions</span>
+                            </h2>
+                            <p class="mt-3 max-w-md mx-auto text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">
+                                Subhead line here about how the services are amazing etc more words for longer subhead
+                                woohoo yeaa boi.
+                            </p>
+                            <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
+                                <div class="rounded-md shadow">
+                                    <a href="register.html" class="w-full flex items-center justify-center px-8 py-3 text-base leading-6 font-medium rounded-md text-white bg-primary focus:outline-none md:py-4 md:text-lg md:px-10">
+                                        Register
+                                    </a>
+                                </div>
+                                <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
+                                    <a href="login.html" class="w-full flex items-center justify-center px-8 py-3 text-base leading-6 font-medium rounded-md text-primary bg-white hover:text-gray-500 focus:outline-none md:py-4 md:text-lg md:px-10">
+                                        Login
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-20 px-4 lg:w-1/2 sm:px-8 xl:pr-16 hidden lg:block">
+                            <p class="text-center text-base leading-6 text-gray-400">
+                                © 2020 Safe Justice, Inc. All rights reserved.
+                            </p>
+                        </div>
                     </div>
-                    <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-                        <a href="login.html" class="w-full flex items-center justify-center px-8 py-3 text-base leading-6 font-medium rounded-md text-primary bg-white hover:text-gray-500 focus:outline-none md:py-4 md:text-lg md:px-10">
-                        Login
-                        </a>
+                    <div class="relative w-full h-64 sm:h-72 md:h-96 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 lg:h-full">
+                        <img class="absolute inset-0 w-full h-full object-cover" src="https://images.unsplash.com/photo-1520333789090-1afc82db536a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2102&q=80"
+                            alt="Woman on her phone">
                     </div>
+                    <div class="my-10 px-4 lg:w-1/2 sm:px-8 xl:pr-16 block lg:hidden">
+                        <p class="text-center text-base leading-6 text-gray-400">
+                            © 2020 Safe Justice, Inc. All rights reserved.
+                        </p>
                     </div>
-                </div>
-                </div>
-                <div class="relative w-full h-64 sm:h-72 md:h-96 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 lg:h-full">
-                <img class="absolute inset-0 w-full h-full object-cover" src="https://images.unsplash.com/photo-1520333789090-1afc82db536a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2102&q=80" alt="Woman on her phone">
-                </div>
-            </main>
+                </main>
+            </div>
         </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="assets/js/main.js"></script>
-</body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
+
 </html>
