Worked on home page

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
                 <main class="lg:relative lg:flex lg:items-center lg:h-full">
                     <div class="mx-auto max-w-7xl xl:mx-20 xl:max-w-auto w-full pt-16 pb-20 text-center lg:py-40 lg:text-left">
                         <div class="px-4 lg:w-1/2 sm:px-8 xl:pr-16">
-                            <img class="h-16 mb-4 mx-auto lg:mx-0" src="assets/images/scram.png" alt="scram">
+                            <img class="h-12 md:h-16 mb-4 mx-auto lg:mx-0" src="assets/images/scram.png" alt="scram">
                             <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl lg:text-5xl xl:text-6xl">
                                 Safe Justice
                                 <br class="xl:hidden">
